# cc_ai_knowledge

./: .gitignore  AGENTS.md  Makefile  PROVENANCE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  validate.yml
conf/: oak_config.yaml
curriculum/: ai-for-developers.yaml
docs/: about.md  index.md
docs/learning-paths/: ai-for-developers.md  index.md
docs/reference/: provenance.md
schema/: knowledge-entry.yaml
scripts/: check_ontology_versions.py  validate.py  validate_terms.py
topics/agentic-coding/: agentic-coding-patterns.md  autonomous-coding-agents.md  claude-code-architecture.md  claude-md-agent-configuration.md  context-window-management.md
topics/agents/: agent-architectures.md  human-in-the-loop.md  multi-agent-systems.md  sub-agent-delegation.md  tool-use-function-calling.md
topics/ai-fundamentals/: claude-model-family.md  extended-thinking-reasoning.md  prompt-engineering-code.md
topics/local-inference/: hardware-and-optimization.md  inference-engines.md  quantization-methods.md
topics/protocols/: mcp-server-development.md  model-context-protocol.md
topics/transformers/: attention-mechanism.md  modern-variants.md  transformer-architecture.md
