[project]
name = "cc-ai-knowledge"
version = "0.1.0"
description = "Curated knowledge base for AI/ML concepts with provenance tracking"
requires-python = ">=3.11,<=3.13"
license = "Apache-2.0"

dependencies = [
    "linkml>=1.9",
    "pyyaml>=6.0",
]

[dependency-groups]
# Future validators (issues #7 and #8)
validators = [
    "linkml-term-validator>=0.2",
    "linkml-reference-validator>=0.1",
    "oaklib>=0.6",
]
