[project]
name = "cc-ai-knowledge"
version = "0.1.0"
description = "Curated knowledge base for AI/ML concepts with provenance tracking"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
    "linkml>=1.9",
    "linkml-term-validator>=0.2",
    "oaklib>=0.6",
    "pyyaml>=6.0",
]

[dependency-groups]
# Future validators (issue #8)
validators = [
    "linkml-reference-validator>=0.1",
]
