[project]
name = "cc-ai-knowledge"
version = "0.1.0"
description = "Curated knowledge base for AI/ML concepts with provenance tracking"
requires-python = ">=3.11"
license = "Apache-2.0"

dependencies = [
    "linkml>=1.9",
    "linkml-term-validator>=0.2",
    "oaklib>=0.6",
    "pyyaml>=6.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
]
# Future validators (issue #8)
validators = [
    "linkml-reference-validator>=0.1",
]
